srcfiles = [
    lnInclude_hack,
    'attachDetach/attachDetach.C',
    'attachDetach/attachInterface.C',
    'attachDetach/detachInterface.C',
    'attachDetach/attachDetachPointMatchMap.C',
    'layerAdditionRemoval/layerAdditionRemoval.C',
    'layerAdditionRemoval/setLayerPairing.C',
    'layerAdditionRemoval/addCellLayer.C',
    'layerAdditionRemoval/removeCellLayer.C',
    'slidingInterface/enrichedPatch/enrichedPatch.C',
    'slidingInterface/enrichedPatch/enrichedPatchPointMap.C',
    'slidingInterface/enrichedPatch/enrichedPatchFaces.C',
    'slidingInterface/enrichedPatch/enrichedPatchPointPoints.C',
    'slidingInterface/enrichedPatch/enrichedPatchCutFaces.C',
    'slidingInterface/enrichedPatch/enrichedPatchMasterPoints.C',
    'polyTopoChange/polyMeshModifier/polyMeshModifier.C',
    'polyTopoChange/polyMeshModifier/polyMeshModifierNew.C',
    'polyTopoChange/polyTopoChanger/polyTopoChanger.C',
    'polyTopoChange/polyTopoChange/addPatchCellLayer.C',
    'polyTopoChange/polyTopoChange/pointEdgeCollapse/pointEdgeCollapse.C',
    'polyTopoChange/polyTopoChange/edgeCollapser.C',
    'polyTopoChange/polyTopoChange/faceCollapser.C',
    'polyTopoChange/polyTopoChange/removeCells.C',
    'polyTopoChange/polyTopoChange/removeFaces.C',
    'polyTopoChange/polyTopoChange/refinementData.C',
    'polyTopoChange/polyTopoChange/refinementDistanceData.C',
    'polyTopoChange/polyTopoChange/removePoints.C',
    'polyTopoChange/polyTopoChange/combineFaces.C',
    'polyTopoChange/polyTopoChange/duplicatePoints.C',
    'polyTopoChange/polyTopoChange/tetDecomposer.C',
    'polyTopoChange/polyTopoChange/hexRef8/hexRef8.C',
    'polyTopoChange/polyTopoChange/hexRef8/hexRef8Data.C',
    'polyTopoChange/polyTopoChange/hexRef8/refinementHistory.C',
    'slidingInterface/slidingInterface.C',
    'slidingInterface/slidingInterfaceProjectPoints.C',
    'slidingInterface/coupleSlidingInterface.C',
    'slidingInterface/slidingInterfaceAttachedAddressing.C',
    'slidingInterface/slidingInterfaceClearCouple.C',
    'slidingInterface/decoupleSlidingInterface.C',
    'perfectInterface/perfectInterface.C',
    'boundaryMesh/boundaryMesh.C',
    'boundaryPatch/boundaryPatch.C',
    'setUpdater/setUpdater.C',
    'meshCut/meshModifiers/boundaryCutter/boundaryCutter.C',
    'meshCut/meshModifiers/meshCutter/meshCutter.C',
    'meshCut/meshModifiers/meshCutAndRemove/meshCutAndRemove.C',
    'meshCut/meshModifiers/undoableMeshCutter/undoableMeshCutter.C',
    'meshCut/meshModifiers/refinementIterator/refinementIterator.C',
    'meshCut/meshModifiers/multiDirRefinement/multiDirRefinement.C',
    'meshCut/cellLooper/cellLooper.C',
    'meshCut/cellLooper/topoCellLooper.C',
    'meshCut/cellLooper/geomCellLooper.C',
    'meshCut/cellLooper/hexCellLooper.C',
    'meshCut/directions/directions.C',
    'meshCut/directions/directionInfo/directionInfo.C',
    'meshCut/edgeVertex/edgeVertex.C',
    'meshCut/cellCuts/cellCuts.C',
    'meshCut/splitCell/splitCell.C',
    'meshCut/refineCell/refineCell.C',
    'meshCut/wallLayerCells/wallLayerCells.C',
    'meshCut/wallLayerCells/wallNormalInfo/wallNormalInfo.C',
    'polyTopoChange/attachPolyTopoChanger/attachPolyTopoChanger.C',
    'polyTopoChange/repatchPolyTopoChanger/repatchPolyTopoChanger.C',
    'fvMeshAdder/fvMeshAdder.C',
    'fvMeshDistribute/fvMeshDistribute.C',
    'polyMeshAdder/faceCoupleInfo.C',
    'polyMeshAdder/polyMeshAdder.C',
    'fvMeshSubset/fvMeshSubsetter.C',
    'motionSmoother/motionSmoother.C',
    'motionSmoother/motionSmootherAlgo.C',
    'motionSmoother/motionSmootherAlgoCheck.C',
    'motionSmoother/motionSmootherData.C',
    'motionSmoother/polyMeshGeometry/polyMeshGeometry.C',
    'motionSmoother/badQualityToCell/badQualityToCell.C',
    'motionSmoother/badQualityToFace/badQualityToFace.C',
    'motionSolvers/motionSolver/motionSolver.C',
    'motionSolvers/displacement/points0/points0MotionSolver.C',
    'motionSolvers/displacement/displacement/zoneMotion.C',
    'motionSolvers/displacement/displacement/displacementMotionSolver.C',
    'motionSolvers/displacement/interpolation/displacementInterpolationMotionSolver.C',
    'motionSolvers/displacement/layeredSolver/displacementLayeredMotionMotionSolver.C',
    'motionSolvers/displacement/layeredSolver/pointEdgeStructuredWalk.C',
    'motionSolvers/componentDisplacement/componentDisplacementMotionSolver.C',
    'motionSolvers/velocity/velocityMotionSolver.C',
    'motionSolvers/velocity/velocityDisplacement/velocityDisplacementMotionSolver.C',
    'motionSolvers/componentVelocity/componentVelocityMotionSolver.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionSolver.C',
    'motionSolvers/displacement/solidBody/multiSolidBodyMotionSolver.C',
    'motionSolvers/displacement/codedPoints0/codedPoints0MotionSolver.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunction.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/solidBodyMotionFunction/solidBodyMotionFunctionNew.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/SDA/SDA.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/tabulated6DoFMotion/tabulated6DoFMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/linearMotion/linearMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/drivenLinearMotion/drivenLinearMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/rotatingMotion/rotatingMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/axisRotationMotion/axisRotationMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/multiMotion/multiMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingLinearMotion/oscillatingLinearMotion.C',
    'motionSolvers/displacement/solidBody/solidBodyMotionFunctions/oscillatingRotatingMotion/oscillatingRotatingMotion.C',
    'motionSolvers/displacement/solidBody/pointPatchFields/derived/solidBodyMotionDisplacement/solidBodyMotionDisplacementPointPatchVectorField.C',
    'createShellMesh/createShellMesh.C',
    'extrudePatchMesh/extrudePatchMesh.C',
    'polyMeshFilter/polyMeshFilterSettings.C',
    'polyMeshFilter/polyMeshFilter.C',
    'pointPatchDist/externalPointEdgePoint.C',
    'pointPatchDist/pointPatchDist.C',
    'zoneSubSet/zoneSubSet.C',
]
link_with = [
    lib_finiteVolume,
    lib_fileFormats,
    lib_surfMesh,
    lib_meshTools,
    lib_extrudeModel,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/dynamicMesh',
    '-I' + recursive_include_dirs / 'src/finiteVolume',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/surfMesh',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/mesh/extrudeModel',
    '-I' + recursive_include_dirs / 'src/dynamicMesh',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_dynamicMesh = library(
    'dynamicMesh',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_dynamicMesh)
