srcfiles = [
    lnInclude_hack,
    'faMesh/faGlobalMeshData/faGlobalMeshData.C',
    'faMesh/faMesh.C',
    'faMesh/faMeshNew.C',
    'faMesh/faMeshDemandDrivenData.C',
    'faMesh/faMeshPatches.C',
    'faMesh/faMeshTopology.C',
    'faMesh/faMeshUpdate.C',
    'faMesh/faMeshBoundaryHalo.C',
    'faMesh/faBoundaryMesh/faBoundaryMesh.C',
    'faMesh/faBoundaryMesh/faBoundaryMeshEntries.C',
    'faMesh/faMeshSubset/faMeshSubset.C',
    'faMesh/faMeshTools/faMeshTools.C',
    'faMesh/faMeshTools/faMeshToolsChecks.C',
    'faMesh/faMeshTools/faMeshToolsProcAddr.C',
    'faMesh/faPatches/faPatch/faPatch.C',
    'faMesh/faPatches/faPatch/faPatchData.C',
    'faMesh/faPatches/faPatch/faPatchNew.C',
    'faMesh/faPatches/basic/coupled/coupledFaPatch.C',
    'faMesh/faPatches/constraint/empty/emptyFaPatch.C',
    'faMesh/faPatches/constraint/processor/processorFaPatch.C',
    'faMesh/faPatches/constraint/wedge/wedgeFaPatch.C',
    'faMesh/faPatches/constraint/cyclic/cyclicFaPatch.C',
    'faMesh/faPatches/constraint/symmetry/symmetryFaPatch.C',
    'distributed/faMeshDistributor.C',
    'distributed/faMeshDistributorNew.C',
    'output/ensight/ensightFaMesh.C',
    'faMesh/faMeshMapper/faMeshMapper.C',
    'faMesh/faMeshMapper/faAreaMapper.C',
    'faMesh/faMeshMapper/faEdgeMapper.C',
    'faMesh/faMeshMapper/faPatchMapper.C',
    'fields/faPatchFields/faPatchField/faPatchFieldBase.C',
    'fields/faPatchFields/faPatchField/faPatchFields.C',
    'fields/faPatchFields/basic/basicSymmetry/basicSymmetryFaPatchScalarField.C',
    'fields/faPatchFields/basic/calculated/calculatedFaPatchFields.C',
    'fields/faPatchFields/basic/coupled/coupledFaPatchFields.C',
    'fields/faPatchFields/basic/zeroGradient/zeroGradientFaPatchFields.C',
    'fields/faPatchFields/basic/fixedValue/fixedValueFaPatchFields.C',
    'fields/faPatchFields/basic/fixedGradient/fixedGradientFaPatchFields.C',
    'fields/faPatchFields/basic/mixed/mixedFaPatchFields.C',
    'fields/faPatchFields/basic/transform/transformFaPatchFields.C',
    'fields/faPatchFields/basic/transform/transformFaPatchScalarField.C',
    'fields/faPatchFields/constraint/empty/emptyFaPatchFields.C',
    'fields/faPatchFields/constraint/processor/processorFaPatchFields.C',
    'fields/faPatchFields/constraint/wedge/wedgeFaPatchFields.C',
    'fields/faPatchFields/constraint/wedge/wedgeFaPatchScalarField.C',
    'fields/faPatchFields/constraint/cyclic/cyclicFaPatchFields.C',
    'fields/faPatchFields/constraint/symmetry/symmetryFaPatchFields.C',
    'fields/faPatchFields/derived/fixedValueOutflow/fixedValueOutflowFaPatchFields.C',
    'fields/faPatchFields/derived/inletOutlet/inletOutletFaPatchFields.C',
    'fields/faPatchFields/derived/slip/slipFaPatchFields.C',
    'fields/faPatchFields/derived/edgeNormalFixedValue/edgeNormalFixedValueFaPatchVectorField.C',
    'fields/faPatchFields/derived/timeVaryingUniformFixedValue/timeVaryingUniformFixedValueFaPatchFields.C',
    'fields/faPatchFields/derived/clampedPlate/clampedPlateFaPatchFields.C',
    'fields/faePatchFields/faePatchField/faePatchFieldBase.C',
    'fields/faePatchFields/faePatchField/faePatchFields.C',
    'fields/faePatchFields/basic/calculated/calculatedFaePatchFields.C',
    'fields/faePatchFields/basic/coupled/coupledFaePatchFields.C',
    'fields/faePatchFields/basic/fixedValue/fixedValueFaePatchFields.C',
    'fields/faePatchFields/constraint/empty/emptyFaePatchFields.C',
    'fields/faePatchFields/constraint/processor/processorFaePatchFields.C',
    'fields/faePatchFields/constraint/wedge/wedgeFaePatchFields.C',
    'fields/faePatchFields/constraint/cyclic/cyclicFaePatchFields.C',
    'fields/faePatchFields/constraint/symmetry/symmetryFaePatchFields.C',
    'fields/areaFields/areaFields.C',
    'fields/edgeFields/edgeFields.C',
    'faMatrices/faMatrices.C',
    'faMatrices/faScalarMatrix/faScalarMatrix.C',
    'interpolation/edgeInterpolation/edgeInterpolation.C',
    'interpolation/edgeInterpolation/edgeInterpolationScheme/edgeInterpolationSchemes.C',
    'interpolation/edgeInterpolation/schemes/linear/linearEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/upwind/upwindEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/linearUpwind/linearUpwindEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/Gamma/GammaEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/blended/blendedEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/skewCorrected/skewCorrectedEdgeInterpolationMake.C',
    'interpolation/edgeInterpolation/schemes/leastSquares/leastSquaresEdgeInterpolationMake.C',
    'finiteArea/fa/fa.C',
    'finiteArea/ddtSchemes/faDdtScheme/faDdtSchemes.C',
    'finiteArea/ddtSchemes/steadyStateFaDdtScheme/steadyStateFaDdtSchemes.C',
    'finiteArea/ddtSchemes/EulerFaDdtScheme/EulerFaDdtSchemes.C',
    'finiteArea/ddtSchemes/backwardFaDdtScheme/backwardFaDdtSchemes.C',
    'finiteArea/ddtSchemes/boundedBackwardFaDdtScheme/boundedBackwardFaDdtScheme.C',
    'finiteArea/d2dt2Schemes/faD2dt2Scheme/faD2dt2Schemes.C',
    'finiteArea/d2dt2Schemes/EulerFaD2dt2Scheme/EulerFaD2dt2Schemes.C',
    'finiteArea/fam/vectorFamDiv.C',
    'finiteArea/divSchemes/faDivScheme/faDivSchemes.C',
    'finiteArea/divSchemes/gaussFaDivScheme/gaussFaDivSchemes.C',
    'finiteArea/gradSchemes/faGradScheme/faGradSchemes.C',
    'finiteArea/gradSchemes/gaussFaGrad/gaussFaGrads.C',
    'finiteArea/gradSchemes/leastSquaresFaGrad/leastSquaresFaVectors.C',
    'finiteArea/gradSchemes/leastSquaresFaGrad/leastSquaresFaGrads.C',
    'finiteArea/gradSchemes/limitedGradSchemes/faceLimitedFaGrad/faceLimitedFaGrads.C',
    'finiteArea/gradSchemes/limitedGradSchemes/edgeLimitedFaGrad/edgeLimitedFaGrads.C',
    'finiteArea/lnGradSchemes/lnGradScheme/lnGradSchemes.C',
    'finiteArea/lnGradSchemes/uncorrectedLnGrad/uncorrectedLnGrads.C',
    'finiteArea/lnGradSchemes/correctedLnGrad/correctedLnGrads.C',
    'finiteArea/lnGradSchemes/limitedLnGrad/limitedLnGrads.C',
    'finiteArea/lnGradSchemes/fourthLnGrad/fourthLnGrads.C',
    'finiteArea/laplacianSchemes/faLaplacianScheme/faLaplacianSchemes.C',
    'finiteArea/laplacianSchemes/gaussFaLaplacianScheme/gaussFaLaplacianSchemes.C',
    'finiteArea/convectionSchemes/faConvectionScheme/faConvectionSchemes.C',
    'finiteArea/convectionSchemes/gaussFaConvectionScheme/gaussFaConvectionSchemes.C',
]
link_with = [
    lib_OpenFOAM,
    lib_fileFormats,
    lib_surfMesh,
    lib_meshTools,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/finiteArea',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/surfMesh',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/finiteArea',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_finiteArea = library(
    'finiteArea',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_finiteArea)
